--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   });
 </script>
 
-    <h1>Testovací stránka</h1>
+    <h1>Testovací stránka V1.2</h1>
 
     <!-- Update Box HTML -->
     <div class="update-box">
