--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
     },
     theme: {
       button: {
-        backgroundColor: '#c73c81',
+        backgroundColor: '#3B81F6',
         right: 20,
         bottom: 20,
         size: 48,
         dragAndDrop: true,
         iconColor: 'white',
-        customIconSrc: 'https://github.com/Petercerny/stipendia/blob/main/N%C3%A1vrh_bez_n%C3%A1zvu-removebg-preview.png?raw=true',
+        customIconSrc: 'https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg',
         autoWindowOpen: {
           autoOpen: true,
           openDelay: 2,
@@ -113,7 +113,7 @@
         showTitle: true,
         showAgentMessages: false,
         title: 'ZČU Bot',
-        titleAvatarSrc: 'https://github.com/Petercerny/stipendia/blob/main/N%C3%A1vrh_bez_n%C3%A1zvu-removebg-preview.png?raw=true',
+        titleAvatarSrc: 'https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg',
         welcomeMessage: 'Zdravím! S čím ti mohu dnes poradit?',
         errorMessage: 'Ajaj někde se stala chyba',
         backgroundColor: '#ffffff',
@@ -128,7 +128,7 @@
           avatarSrc: 'https://raw.githubusercontent.com/Petercerny/obrazky/main/bot.png',
         },
         userMessage: {
-          backgroundColor: '#c73c81',
+          backgroundColor: '#3B81F6',
           textColor: '#ffffff',
           showAvatar: true,
           avatarSrc: 'https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/usericon.png',
@@ -137,7 +137,7 @@
           placeholder: 'Napište svůj dotaz',
           backgroundColor: '#ffffff',
           textColor: '#303235',
-          sendButtonColor: '#c73c81',
+          sendButtonColor: '#3B81F6',
           maxChars: 100,
           maxCharsWarningMessage: 'Překročili jste limit znaků. Zadejte prosím méně než 100 znaků.',
           autoFocus: true,
